# bindeps-simple

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: run.rs  run_local.rs
src/: lib.rs
tests/: test.rs
