[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "Boot kernel code with mmu."
edition = "2024"
keywords = ["bindeps"]
license = "MIT"
name = "bindeps-simple"
repository = "https://github.com/rcore-os/bindeps-simple"
version = "0.1.2"

[dependencies]
anyhow = "1.0"
flate2 = "1.0"
rand = "0.9.1"
reqwest = {version = "0.12", features = ["blocking"]}
tar = "0.4"
cargo_metadata = "0.20"